--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/FlorentBelotti/Libft.git
+	branch = main
 [submodule "minilibx-linux"]
 	path = minilibx-linux
 	url = https://github.com/42Paris/minilibx-linux.git
+	branch = main
