Makefile, format, libft update

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,3 @@
-[submodule "libft"]
-	path = libft
-	url = https://github.com/FlorentBelotti/Libft.git
-	branch = main
-[submodule "minilibx-linux"]
-	path = minilibx-linux
-	url = https://github.com/42Paris/minilibx-linux.git
-	branch = main
+[submodule "Includes/libft"]
+	path = Includes/libft
+	url = https://github.com/FlorentBelotti/42_cursus_libft.git
